[gd_scene load_steps=13 format=3 uid="uid://bb8glen1dqegx"]

[ext_resource type="Script" uid="uid://3i6bst0bgb1e" path="res://scenes/main/world_info.gd" id="1_64tly"]
[ext_resource type="FontFile" uid="uid://ir3t8xybm2be" path="res://assets/font/Bungee-Regular.ttf" id="2_64tly"]
[ext_resource type="StyleBox" uid="uid://c4p6w77gk6tqw" path="res://scenes/global/btn/normal_circle.tres" id="3_4bhnq"]
[ext_resource type="StyleBox" uid="uid://ctaxkk6gidyje" path="res://scenes/global/btn/pressed_circle.tres" id="4_v5yh4"]
[ext_resource type="StyleBox" uid="uid://bsgm6cnrj4y03" path="res://scenes/global/btn/hover_circle.tres" id="5_t0kwb"]
[ext_resource type="StyleBox" uid="uid://cu1k0gt41u1eo" path="res://scenes/global/btn/disabled_circle.tres" id="6_nj021"]
[ext_resource type="StyleBox" uid="uid://dmhpqfy30s7h7" path="res://scenes/global/btn/focus_circle.tres" id="7_plsry"]
[ext_resource type="FontFile" uid="uid://beyr33vcgbm81" path="res://assets/font/LuckiestGuy.ttf" id="8_iwlgo"]
[ext_resource type="Texture2D" uid="uid://33tdhj40awe" path="res://assets/texture/world_icon/survival.png" id="9_64tly"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvsss"]
bg_color = Color(0.49411765, 0.49411765, 0.49411765, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="Shader" id="Shader_573b8"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_64tly"]
shader = SubResource("Shader_573b8")

[node name="world_info" type="Control"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64tly")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 680.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qvsss")

[node name="play_btn" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 603.0
offset_top = 68.0
offset_right = 667.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("2_64tly")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_4bhnq")
theme_override_styles/pressed = ExtResource("4_v5yh4")
theme_override_styles/hover = ExtResource("5_t0kwb")
theme_override_styles/disabled = ExtResource("6_nj021")
theme_override_styles/focus = ExtResource("7_plsry")
text = "â–¶"

[node name="delete_btn" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 524.0
offset_top = 68.0
offset_right = 588.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("3_4bhnq")
theme_override_styles/pressed = ExtResource("4_v5yh4")
theme_override_styles/hover = ExtResource("5_t0kwb")
theme_override_styles/disabled = ExtResource("6_nj021")
theme_override_styles/focus = ExtResource("7_plsry")
text = "ðŸ—‘"

[node name="world_name_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("8_iwlgo")
theme_override_font_sizes/font_size = 48
text = "new world"
vertical_alignment = 1

[node name="world_img" type="TextureRect" parent="Panel"]
material = SubResource("ShaderMaterial_64tly")
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 490.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_64tly")

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="Panel/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="Panel/delete_btn" to="." method="_on_delete_btn_pressed"]
